--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -181,17 +181,9 @@
   .el-card__body {
     padding-top: 10px !important;
   }
-  .el-popper {
-    margin-left: 20px !important;
-  }
 }
 .tab_list {
   .cell {
-    width:120px;
-    white-space:nowrap !important;
-    text-overflow:ellipsis !important;
-    -o-text-overflow: ellipsis !important;
-    overflow:hidden !important;
     height: 35px;
     line-height: 35px !important;
   }
@@ -199,4 +191,13 @@
     padding: 0 !important;
   }
 }
-
+.Add_field {
+ .el-checkbox-group{
+   padding: 5px;
+ }
+}
+.delete_field {
+  .el-checkbox-group{
+    padding: 5px;
+  }
+}
